src/app/review/review-page.component.scss
.scroll-content {
  overflow: hidden;
}

.item-block {
  min-height: 3.0rem;
}

.dictionary {
  margin-top: 17px;

  &__word {
    font-size: 2.1em;

    rt {
      font-size: 60%;
    }
  }

  &__meaning {
    max-width: 40%;
    color: var(--ion-color-medium);
  }
}

.answer-item {
  margin-top: 3px;
  font-size: 1.7em;
  line-height: 1.8;

  .answer-input::placeholder {
    color: rgba(#ccc, .5);
  }

  &.item-ios.item-block .item-inner {
    padding-right: 0;
  }

  [slot='end'] {
    margin: 0;
    height: 100%;
    width: 45px;

    ion-icon {
      margin: 0;
      font-size: 2em;
    }
  }
}

.answer-input,
[type='submit'] {
  background-color: transparent;
}

.answer-input {
  appearance: none;
  width: 100%;
  outline: none;
  border: none;
}

.correct {
  .answer-item {
    --background: var(--ion-color-success);
    --color: var(--ion-color-success-contrast);
  }

  [type='submit'] {
    color: var(--ion-color-success-contrast);
  }
}

.incorrect {
  .answer-item {
    --background: var(--ion-color-danger);
    --color: var(--ion-color-danger-contrast);
  }

  [type='submit'] {
    color: var(--ion-color-danger-contrast);
  }
}

.answer-form {
  position: relative;
}

.animation {
  position: absolute;
  right: 20px;
  top: -120px;
  width: 120px;
  height: 120px;
}

.star {
  fill: yellow;
  transform-origin: 0 0;
  opacity: 1;
}

#star2 {
  fill: #ffcc33;
}

#star3 {
  fill: #eecc33;
}

